# using-duckdb

./: .gitignore  Makefile  README.md  pyproject.toml  repos.md
.github/workflows/: search.yaml
using_duckdb/: helpers.py  plot_results.py  search_repositories.py
