[project]
name = "using-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "plotly[express]>=6.1.1",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]
lint = [
    "isort>=6.0.1",
    "ruff>=0.11.11",
]



[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "postgres"
]

line-length = 120
indent-width = 4


[tool.isort]
force_single_line = "true"
